--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -1,151 +1,135 @@
+{% extends 'content-ui-base.html' %}
+{% load static %}
 {% load url_replace %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>uicCourse</title>
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
-    <!-- Custom styles for this template -->
-    <style type="text/css">
-        /* Sticky footer styles
-        -------------------------------------------------- */
-        html {
-            position: relative;
-            min-height: 100%;
-        }
+{% load widget_tweaks %}
+{% load humanize %}
 
-        body {
-            /* Margin bottom by footer height */
-            margin-bottom: 60px;
-        }
+{% block title %}Course List{% endblock %}
 
+{% block head_extends %}
+{% endblock %}
 
-    </style>
-    {% load static %}
-</head>
-
-<body>
-{% include "course/header.html" %}
-{% include "course/messager.html" %}
-<main role="main" class="container mb-5">
-    <div class="d-flex justify-content-between align-items-center">
-        <h1 class="mt-md-3">{% if filter_status.is_filtered %}
-            {% if filter_status.major is not None %}
-            {{ filter_status.major }}
+{% block body %}
+    <main role="main" class="container mb-5">
+        <div class="d-flex justify-content-between align-items-center">
+            <h1 class="mt-md-3">{% if filter_status.is_filtered %}
+                {% if filter_status.major is not None %}
+                    {{ filter_status.major }}
+                {% endif %}
+                {% if filter_status.category is not None %}
+                    {{ filter_status.category }}
+                {% endif %}
+            {% endif %} Course List
+                <button class="btn btn-outline-dark btn-sm" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseSelectControl"
+                        aria-expanded="false" aria-controls="collapseSelectControl">
+                    <i class="fa fa-filter" aria-hidden="true"></i>
+                </button>
+            </h1>
+            <form class="my-2" action="{% url 'search_course' %}">
+                <input class="form-control" type="text" placeholder="Search course" autocomplete="off" name="search"
+                       value="{% if search_result %}{{ raw_input }}{% endif %}">
+            </form>
+            {% if user.is_superuser or user.is_staff %}
+                <a href="{% url 'course_create' %}" class="btn btn-primary">Create Course</a>
             {% endif %}
-            {% if filter_status.category is not None %}
-            {{ filter_status.category }}
+        </div>
+        <div class="collapse pt-2 pb-4" id="collapseSelectControl">
+            {% if coursetypes %}
+                <div class="btn-group">
+                    <button type="button" class="btn btn-secondary">Category</button>
+                    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
+                            data-bs-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                        <span class="visually-hidden">Toggle Category Dropdown</span>
+                    </button>
+                    <div class="dropdown-menu">
+                        {% for ct in coursetypes %}
+                            <a class="dropdown-item" href="{{ request.path }}?category={{ ct.id }}">{{ ct.name }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
             {% endif %}
-        {% endif %} Course List
-            <button class="btn btn-outline-dark btn-sm" type="button" data-toggle="collapse" data-target="#collapseSelectControl"
-                    aria-expanded="false" aria-controls="collapseSelectControl">
-                <i class="fa fa-filter" aria-hidden="true"></i>
-            </button>
-        </h1>
-        <form class="my-2" action="{% url 'search_course' %}">
-            <input class="form-control" type="text" placeholder="Search course" autocomplete="off" name="search"
-                   value="{% if search_result %}{{ raw_input }}{% endif %}">
-        </form>
-        {% if user.is_superuser or user.is_staff %}
-            <a href="{% url 'course_create' %}" class="btn btn-primary">Create Course</a>
-        {% endif %}
-    </div>
-    <div class="collapse pt-3 pb-3" id="collapseSelectControl">
-    {% if coursetypes %}
-        <div class="btn-group">
-            <button type="button" class="btn btn-info">Category</button>
-            <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                <span class="sr-only">Toggle Category Dropdown</span>
-            </button>
-            <div class="dropdown-menu">
-                {% for ct in coursetypes %}
-                <a class="dropdown-item" href="{{ request.path }}?category={{ ct.id }}">{{ ct.name }}</a>
-                {% endfor %}
-            </div>
-        </div>
-    {% endif %}
-    {% if majors %}
-        <div class="btn-group">
-            <button type="button" class="btn btn-success">Major</button>
-            <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                <span class="sr-only">Toggle Major Dropdown</span>
-            </button>
-            <div class="dropdown-menu">
-                {% for major in majors %}
-                <a class="dropdown-item" href="{{ request.path }}?major={{ major.id }}">{{ major.major }}</a>
-                {% endfor %}
-            </div>
-        </div>
-    {% endif %}
+            {% if majors %}
+                <div class="btn-group">
+                    <button type="button" class="btn btn-success">Major</button>
+                    <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split"
+                            data-bs-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                        <span class="visually-hidden">Toggle Major Dropdown</span>
+                    </button>
+                    <div class="dropdown-menu">
+                        {% for major in majors %}
+                            <a class="dropdown-item"
+                               href="{{ request.path }}?major={{ major.id }}">{{ major.major }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
 
-    </div>
+        </div>
 
-    {% if courses %}
-        <div class="card-columns">
+        <div class="row" data-masonry='{"percentPosition": true }'>
             {% for course in courses %}
-                <a href="{% url 'course_detail' course.id %}">
+                <div class="col-sm-6 col-lg-4 mb-4">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title"><span
-                                    class="badge badge-secondary">{{ course.course_id }}</span> {{ course.course_name_en }}
+                                    class="badge bg-secondary">{{ course.course_id }}</span> {{ course.course_name_en }}
                             </h5>
                             <p class="card-text">{{ course.course_name_cn }}</p>
+                            <p class="card-text"><small class="text-muted">{{ course.course_description }}</small></p>
+                            <a href="{% url 'course_detail' course.id %}" class="stretched-link">Check Details</a>
                         </div>
                     </div>
-                </a>
+                </div>
             {% endfor %}
         </div>
-    {% else %}
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">No course data</h1>
-                <p class="lead">Please check it out later.</p>
-            </div>
+        <div style="margin-bottom: 5rem;">
+            <nav>
+                <ul class="pagination justify-content-center">
+                    {% if courses.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?{% url_replace page=1 %}" aria-label="Previous">
+                                <span aria_hidden="true">&laquo;</span></a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?{% url_replace page=courses.previous_page_number %}"
+                               aria-label="Previous">
+                                <span aria_hidden="true">&lsaquo;</span></a>
+                        </li>
+                    {% endif %}
+
+                    <li class="page-item active"><a class="page-link"
+                                                    href="?{% url_replace page=courses.number %}">Page {{ courses.number }}
+                        of {{ courses.paginator.num_pages }}</a></li>
+
+                    {% if courses.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?{% url_replace page=courses.next_page_number %}"
+                               aria-label="Next">
+                                <span aria_hidden="true">&rsaquo;</span>
+                            </a>
+                        </li>
+                        <li class="page-item">
+
+                            <a class="page-link" href="?{% url_replace page=courses.paginator.num_pages %}"
+                               aria-label="Next">
+                                <span aria_hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
         </div>
-    {% endif %}
-    <div style="margin-bottom: 5rem;">
-        <nav>
-            <ul class="pagination justify-content-center">
-                {% if courses.has_previous %}
-                    <li class="page-item">
-                        <a class="page-link" href="?{% url_replace page=1 %}" aria-label="Previous">
-                            <span aria_hidden="true">&laquo;</span></a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?{% url_replace page=courses.previous_page_number %}" aria-label="Previous">
-                            <span aria_hidden="true">&lsaquo;</span></a>
-                    </li>
-                {% endif %}
+    </main>
+{% endblock %}
 
-                <li class="page-item active"><a class="page-link"
-                                                href="?{% url_replace page=courses.number %}">Page {{ courses.number }}
-                    of {{ courses.paginator.num_pages }}</a></li>
+{% block footer_extends %}{% endblock %}
 
-                {% if courses.has_next %}
-                    <li class="page-item">
-                        <a class="page-link" href="?{% url_replace page=courses.next_page_number %}" aria-label="Next">
-                            <span aria_hidden="true">&rsaquo;</span>
-                        </a>
-                    </li>
-                    <li class="page-item">
+{% block extra_js %}
+    <script type="text/javascript" src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
+{% endblock %}
 
-                        <a class="page-link" href="?{% url_replace page=courses.paginator.num_pages %}" aria-label="Next">
-                            <span aria_hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-        </nav>
-    </div>
-</main>
-{% include "course/footer.html" %}
-</body>
-</html>
+{% block out_of_body %}{% endblock %}
+
