--- a/dashboard/templates/auth/change_password.html
+++ b/dashboard/templates/auth/change_password.html
@@ -1,47 +1,25 @@
+{% extends 'content-ui-base.html' %}
+{% load static %}
 {% load widget_tweaks %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>uicCourse | Change Password</title>
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" crossorigin="anonymous" />
-    <!-- Custom styles for this template -->
-    <style type="text/css">
-        /* Sticky footer styles
-        -------------------------------------------------- */
-        html {
-            position: relative;
-            min-height: 100%;
-        }
+{% load humanize %}
 
-        body {
-            /* Margin bottom by footer height */
-            margin-bottom: 60px;
-        }
+{% block title %}Change Password{% endblock %}
 
-        /* Custom page CSS
-        -------------------------------------------------- */
-        .invalid-message{
+{% block head_extends %}
+    <style>
+    .invalid-message{
             width: 100%;
             margin-top: .25rem;
             font-size: 80%;
             color: #dc3545;
         }
     </style>
-    {% load static %}
-</head>
+{% endblock %}
 
-<body>
-{% include "index/header.html" %}
-{% include "index/messager.html" %}
-<main role="main" class="container mb-5">
+{% block body %}
+    <main role="main" class="container mb-5">
     <h1 class="mt-md-3">Change your password</h1>
-    {% include "dashboard/functions.html" %}
+    {% include "dashboard-functions.html" %}
     <form method="post">
         {% csrf_token %}
         {% for field in form %}
@@ -61,6 +39,10 @@
         <button type="submit" class="btn btn-primary mb-5">Sign up</button>
     </form>
 </main>
-{% include "index/footer.html" %}
-</body>
-</html>
+{% endblock %}
+
+{% block footer_extends %}{% endblock %}
+
+{% block extra_js %}{% endblock %}
+
+{% block out_of_body %}{% endblock %}
