--- a/dashboard/templates/dashboard/tags.html
+++ b/dashboard/templates/dashboard/tags.html
@@ -1,38 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>uicCourse | Tags</title>
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" crossorigin="anonymous" />
-    <!-- Custom styles for this template -->
-    <style type="text/css">
-        /* Sticky footer styles
-        -------------------------------------------------- */
-        html {
-            position: relative;
-            min-height: 100%;
-        }
+{% extends 'content-ui-base.html' %}
+{% load static %}
+{% load widget_tweaks %}
+{% load humanize %}
 
-        body {
-            /* Margin bottom by footer height */
-            margin-bottom: 60px;
-        }
+{% block title %}Tags{% endblock %}
 
-        /* Custom page CSS
-        -------------------------------------------------- */
+{% block head_extends %}
+{% endblock %}
 
-    </style>
-    {% load static %}
-</head>
-
-<body>
-{% include "index/header.html" %}
-{% include "index/messager.html" %}
+{% block body %}
 <main role="main" class="container mb-5">
     <div class="d-flex justify-content-between align-items-center">
         <h1 class="mt-md-3">Tags</h1>
@@ -40,7 +16,7 @@
         <a href="{% url 'tags_create' %}" class="btn btn-primary">Create New Tags</a>
         {% endif %}
     </div>
-    {% include "dashboard/functions.html" %}
+    {% include "dashboard-functions.html" %}
     <div class="table-responsive">
         <table class="table">
             <thead>
@@ -60,22 +36,22 @@
                         <td>{{ tag.tag_description }}</td>
                         <td>
                         {% if tag.tag_opposite %}}
-                        <span class="badge badge-dark">{{ tag.tag_opposite }}</span>
+                        <span class="badge bg-dark">{{ tag.tag_opposite }}</span>
                         {% else %}
-                        <span class="badge badge-dark">None</span>
+                        /
                         {% endif %}</td>
                         <td>
                             {% if tag.tag_sentiment_index > 0 %}
-                            <span class="badge badge-success">{{ tag.tag_sentiment_index }}</span>
+                            <span class="badge bg-success">+{{ tag.tag_sentiment_index }}</span>
                             {% else %}
                                 {% if tag.tag_sentiment_index < 0 %}
-                                <span class="badge badge-danger">{{ tag.tag_sentiment_index }}</span>
+                                <span class="badge bg-danger">{{ tag.tag_sentiment_index }}</span>
                                 {% else %}
-                                <span class="badge badge-secondary">{{ tag.tag_sentiment_index }}</span>
+                                <span class="badge bg-secondary">{{ tag.tag_sentiment_index }}</span>
                                 {% endif %}
                             {% endif %}
                         </td>
-                        <td><a href="{% url 'tags_modify' tag.id %}" class="btn btn-sm btn-warning">Edit</a></td>
+                        <td><a href="{% url 'tags_modify' tag.id %}">Edit</a></td>
                     </tr>
                     {% endfor %}
                 {% else %}
@@ -87,6 +63,10 @@
         </table>
     </div>
 </main>
-{% include "index/footer.html" %}
-</body>
-</html>
+{% endblock %}
+
+{% block footer_extends %}{% endblock %}
+
+{% block extra_js %}{% endblock %}
+
+{% block out_of_body %}{% endblock %}
