--- a/handbook/templates/handbook/content.html
+++ b/handbook/templates/handbook/content.html
@@ -1,49 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>uicCourse</title>
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+{% extends 'content-ui-base.html' %}
+{% load static %}
+{% load widget_tweaks %}
+{% load humanize %}
 
-    <!-- Custom styles for this template -->
-    <style type="text/css">
-        /* Sticky footer styles
-        -------------------------------------------------- */
-        html {
-            position: relative;
-            min-height: 100%;
-        }
+{% block title %}{{ major.major.major_en_abbr }} - {{ admission_year }} Admission Handbook{% endblock %}
 
-        body {
-            /* Margin bottom by footer height */
-            margin-bottom: 60px;
-        }
+{% block head_extends %}
+{% endblock %}
 
-        /* Custom page CSS
-        -------------------------------------------------- */
-
-        .transp_input {
-            background: rgba(0, 0, 0, 0);
-        }
-
-        .transp_input:focus {
-            background: rgb(255, 255, 255);
-        }
-    </style>
-    {% load static %}
-</head>
-
-<body>
-{% include "handbook/header.html" %}
-{% include "handbook/messager.html" %}
-<main role="main" class="container mb-5" style="position: relative; overflow: hidden">
+{% block body %}
+    <main role="main" class="container mb-5" style="position: relative; overflow: hidden">
     {% if is_valid %}
     <h1 class="mt-md-3">{{ major.major.major_en_abbr }} - {{ admission_year }} Admission Handbook</h1>
     <p class="lead">Public Beta</p>
@@ -85,11 +51,11 @@
     <a href="{% url "handbook_home" %}" class="lead">Back home ></a>
     {% endif %}
 </main>
-{% include "index/footer.html" %}
-<script>
-    $(function () {
-      $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
-</body>
-</html>
+
+{% endblock %}
+
+{% block footer_extends %}{% endblock %}
+
+{% block extra_js %}{% endblock %}
+
+{% block out_of_body %}{% endblock %}
